[package]
name = "showers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
aws-config = "1.2.0"
aws-sdk-cloudformation = "1.26.0"
aws-sdk-ec2 = "1.34.0"
base64 = "0.22.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
